--- a/games.html
+++ b/games.html
@@ -17,7 +17,7 @@
         <span>
             <h3>5 reasons why this game is my favorite:</h3>
             <o1>
-                <li>The community is balanced. There are just as much toxic players as there are kind players. </li>
+                <li>The community is balanced. There are just as much kind and fun players as there are toxic players. </li>
                 <li>It is a fun FPS</li>
                 <li>The game can be both competitive and chill depending on the player</li>
                 <li>It is addicting</li>
